# arrow

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: HighPriorityIssues.yml  Linux.yml  MacOS.yml  MainDistributionPipeline.yml  NodeJS.yml  SQL.yml  Windows.yml
arrow/: CMakeLists.txt  arrow_extension.cpp  arrow_scan_ipc.cpp  arrow_stream_buffer.cpp  arrow_to_ipc.cpp
arrow/include/: arrow_scan_ipc.hpp  arrow_stream_buffer.hpp  arrow_to_ipc.hpp
data/parquet-testing/: lineitem_sf0_01.parquet
scripts/: build_arrow.sh
src/: arrow_extension.cpp  arrow_readers.cpp  arrow_scan_ipc.cpp  arrow_stream_buffer.cpp  arrow_to_ipc.cpp
src/include/: arrow_extension.hpp  arrow_readers.hpp  arrow_scan_ipc.hpp  arrow_stream_buffer.hpp  arrow_to_ipc.hpp
test/nodejs/: arrow_ipc.test.js  arrow_test.js
test/sql/: arrow.test  test_arrow.test
